--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Jul 14 12:00:31 CEST 2023
-sdk.dir=C\:\\Users\\Bo\\AppData\\Local\\Android\\Sdk
+#Sat Jul 15 21:09:39 CEST 2023
+sdk.dir=/Users/boniehaus/Library/Android/sdk
