--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -5,7 +5,7 @@
 
     <!-- Public plugin name should be written in Title Case.
          Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-name -->
-    <name>All Tabs to .TXT</name>
+    <name>All Tabs to .txt</name>
 
     <!-- A displayed Vendor name or Organization ID displayed on the Plugins Page. -->
     <vendor email="bo.niehaus@gmail.com" url="https://borisniehaus.de">Boris Niehaus</vendor>
@@ -14,7 +14,7 @@
          Simple HTML elements (text formatting, paragraphs, and lists) can be added inside of <![CDATA[ ]]> tag.
          Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-description -->
     <description><![CDATA[
-    This Plugin saves the content of all open tabs in a single .txt-file!<br>
+    This Plugin saves the content of all open tabs in a single text file!<br>
   ]]></description>
 
     <!-- Product and plugin compatibility requirements.
@@ -31,7 +31,7 @@
     </extensions>
 
     <actions>
-        <action id="TabToFileAction" class="TabToFileAction" text="Save Tab Contents To File">
+        <action id="TabToFileAction" class="TabToFileAction" text="Save Tab Contents To File" icon="/icons/icon.png">
             <add-to-group group-id="ToolsMenu" anchor="last" />
         </action>
     </actions>
